# todo-web

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  possible_improvements.txt  sqlite3.exp  sqlite3.lib  testdb.sqlite3  todo_web.postman_collection.json
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/db/: mod.rs  models.rs  schema.rs
backend/src/rest/: all_tasks.rs  single_task.rs  stats.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  types.rs
migrations/2022-09-10-125636_task/: up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/rest/: all_tasks.rs  mod.rs  single_task.rs
