[package]
name = "todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["backend", "frontend"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
