[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
todo-web = { path = ".." }
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
rocket = "0.4.2"
rocket_cors = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
