[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
todo-web = { path = ".." }
seed = "=0.4.1"
wasm-bindgen = "=0.2.50"
web-sys = "^0.3.27"
futures = "^0.1.28"
chrono = { version = "0.4.11", features = ["serde"] }
indexmap = "1.9.1"